2001-03-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm24_convert.in (line):
	replace "IconFont" with "Style * IconFont"

2001-03-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm-menu-headlines.1:
	* fvwm-menu-directory.1:
	* fvwm-menu-xlock.in:
	* fvwm-menu-headlines.in:
	* fvwm-menu-directory.in:
	changed some comments so that they don't look like cvs conflict markers

2001-02-26  Dan Espen  <dane@mk.telcordia.com>

	* make_fvwmdist.sh (VER): Add instructions for NEWS update on stable
	branch.

2001-02-25  Dan Espen  <dane@mk.telcordia.com>

	* make_fvwmdist.sh (wrong_dir): Use portable way of redirecting
	the grep output.

2001-01-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* make_fvwmdist.sh (wrong_dir):
	fixed logic
	partially rewritten for portability reasons
	new options
	  -R: skip to next release series number after building
	  -M: skip to next major release number after building
	  -w: disable -Werror in compiler flags
	  -a, -b, -s: build an alpha/beta/stable release

2001-01-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* make_fvwmdist.sh (wrong_dir):
	portability fixes

2000-01-24  Mikhael Goikhman  <migo@homemail.com>

	fvwm-config.in:
	show gnomelibs and multibyte support in summary and options

2000-01-21  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-desktop.{in,1}:
	* fvwm-menu-directory.{in,1}:
	rewordings

2000-01-20  olicha  <olivier.chapuis@free.fr>

	* fvwm-menu-desktop.in:
	* fvwm-menu-desktop.1:
	New option --menu-style and fix check for perl >= 5.6
	(the value of $] is 5.006).

	* fvwm-menu-directory.in:
	* fvwm-menu-directory.1:
	New option --menu-style

2000-01-01  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-desktop.in:
	fixed execution on older perl < 5.6

2000-12-12  olicha  <olivier.chapuis@free.fr>

	* fvwm-menu-desktop.in:
	* fvwm-menu-desktop.1:
	New option --uniconv and --uniconv-exec for UTF8 encoding

2000-12-09  olicha  <olivier.chapuis@free.fr>

	* fvwm-menu-desktop.in:
	* fvwm-menu-desktop.1: